fix: z-index для кнопки профиля

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -31,6 +31,7 @@
   padding: 0;
   cursor: pointer;
   transition: transform 0.2s;
+  z-index: 3;
 }
 
 .profile__button:hover {
